# webp-converter

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx  config.app.json  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/AboutModal/: AboutModal.tsx
src/components/Button/: Button.tsx
src/components/DropZoneOverlay/: DropZoneOverlay.tsx  index.ts
src/components/DropZoneWrapper/: DropZoneWrapper.tsx  index.ts
src/components/Header/: Header.tsx
src/components/ImagesTable/: ImagesTable.tsx  index.ts
src/components/Loader/: Loader.tsx
src/components/MessageBox/: MessageBox.tsx
src/components/Select/: Select.tsx
src/components/TableColumn/: TableColumn.tsx
src/components/TableHeader/: TableHeader.tsx
src/components/TableRow/: TableRow.tsx
src/components/ThemeProvider/: ThemeProvider.tsx
src/interfaces/: Image.ts
