[package]
name = "webp-converter"
version = "0.3.3"
description = "Desktop app that lets you convert .jpg or .png images to .web and viceversa"
authors = ["AlexAzumi"]
license = ""
repository = "https://github.com/AlexAzumi/webp-converter"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["updater", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webp = "0.2.5"
image = "0.24.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
