[package]
name = "webp-converter"
version = "1.2.3"
description = "Desktop app that lets you convert .jpg or .png images to .web and viceversa"
authors = ["AlexAzumi"]
license = ""
repository = "https://github.com/AlexAzumi/webp-converter"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webp = "0.2.5"
image = "0.24.7"
tauri-plugin-dialog = "2.4"
tauri-plugin-shell = "2.3"
tauri-plugin-store = "2.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
