[package]
name = "webp-converter"
version = "1.3.0"
description = "Desktop app that lets you convert .jpg or .png images to .web and viceversa"
authors = ["AlexAzumi"]
license = ""
repository = "https://github.com/AlexAzumi/webp-converter"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webp = "0.3"
image = "0.25.9"
tauri-plugin-dialog = "2.7"
tauri-plugin-shell = "2.3"
tauri-plugin-store = "2.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
